# komehub

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.bat  package-lock.json  package.json  start-dev.bat  start.bat
.github/: PULL_REQUEST_TEMPLATE.md
assets/: config.json
core/: Cargo.toml
core/src/: innertube_parser.rs  lib.rs  logging.rs  main.rs  model_queue.rs  napi_bridge.rs  notification_settings.rs  notification_sound.rs  renderer_logging.rs  shared_memory.rs  tts.rs
core/src/common/: fx_rates.rs  mod.rs  state_machine.rs  superchat.rs
core/src/engine/: backup_manager.rs  bootstrap.rs  comment_aux_io.rs  demo_seed.rs  effect_manager.rs  export_import.rs  export_progress_reporter.rs  import_progress_reporter.rs  listener_aux_io.rs  listener_manager.rs  mod.rs  performance.rs  preset_manager.rs  scene_manager.rs  template_aux_io.rs  template_manager.rs  video_owner_resolver.rs
core/src/font_cache/: mod.rs
core/src/image_cache/: mod.rs
core/src/infra/: config.rs  mod.rs  zip_utils.rs
core/src/model_queue/: backup_handlers.rs  command.rs  dispatch.rs  effect_handlers.rs  import_export_dispatch.rs  import_export_handlers.rs  listener_dispatch.rs  listener_handlers.rs  listener_owner_handlers.rs  listener_sync_handlers.rs  listener_tag_handlers.rs  notification.rs  performance_dispatch.rs  performance_handlers.rs  preset_handlers.rs  realtime_dispatch.rs  realtime_handlers.rs  scene_dispatch.rs  scene_handlers.rs  template_handlers.rs  trace.rs
core/src/state/: comment.rs  connection.rs  engine_status.rs  listener.rs  mod.rs  performance_log.rs  scene.rs
core/src/surface/: app_config.rs  backup.rs  cache.rs  comment.rs  effect_crud.rs  effects.rs  export.rs  health.rs  listeners.rs  mod.rs  onecomme.rs  performance.rs  preset.rs  public_api.rs  remote.rs  saved_searches.rs  scene.rs  sse.rs  sse_shared.rs  templates.rs  tts.rs
core/tests/: core_exe_smoke_test.rs  scene_loader_test.rs  sse_format_test.rs
docs/: api-spec.md  effect-plugin-guide.md  onecomme-migration-guide.md  template-authoring-guide.md  template-runtime.md
effects-overlay/: index.html
electron/: chat-scraper.js  core-bridge.js  fs-utils.js  log.js  main.js  migration.js  path-utils.js  preload.js  youtube-url.js
scripts/: prepare-native-module.js
test/: architecture-boundary.test.js  browser-card-renderless-smoke.test.js  comment-effects-runtime-q16.test.js  file-utils.test.js  fs-utils.test.js  (+15 more)
(+233 files in other folders)
